Fix spelling in `SynchronizingMessageListener.SubscriptionSynchronizion`.
Additionally, cleanup compiler warnings.

Closes #2656
Original pull request: #2657